Mon Sep  2 23:46:29 2013  Akinori MUSHA  <knu@iDaemons.org>

	* numeric.c (num_step): Default the limit argument to infinity and
	  allow it to be omitted.  Keyword arguments (by: and to:) are
	  introduced for ease of use. [Feature #8838] [ruby-dev:47662]
	  [ruby-dev:42194]

	* numeric.c (num_step): Optimize for infinite loop.

Mon Sep  2 23:46:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_str_options): use valid suffix word only, as well as
	  numeric literal, for the backward comatibility.

Mon Sep  2 22:55:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (ISDIGIT): Unused macro removed.

Mon Sep  2 22:49:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (str2big_poweroftwo): Extracted from rb_cstr_to_inum.
	  (str2big_normal): Ditto.
	  (str2big_karatsuba): Ditto.

Mon Sep  2 17:53:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (str_suffix_gen): String#b creates new string object, use
	  force_encoding instead.

Mon Sep  2 16:06:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* NEWS: Add note about frozen string literals

	* compile.c (case_when_optimizable_literal): optimize NODE_LIT strings
	  in when clauses of case statements

	* ext/ripper/eventids2.c: add tSTRING_SUFFIX

	* parse.y: add 'f' suffix on string literals for frozen strings

	* test/ripper/test_scanner_events.rb: add scanner tests

	* test/ruby/test_string.rb: add frozen string tests

	[Feature #8579] [ruby-core:55699]

Mon Sep  2 14:39:29 2013  Akinori MUSHA  <knu@iDaemons.org>

	* ruby.c (Process#setproctitle): [DOC] Fix and improve rdoc.

	* ruby.c (Process#argv0): [DOC] Improve rdoc.

Mon Sep  2 14:15:00 2013  Kenta Murata  <mrkn@cookpad.com>

	* NEWS: fix description of number literal suffixes.

Mon Sep  2 14:01:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* test/rake/test_rake_rules.rb: add space after string literal to
	  prevent conflict with string options syntax "foo"opts

	* test/rss/rss-assertions.rb: ditto
